1) Continued algorithm: suspicion meter / counter. 2) PCA preliminary test.

--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \newif\ifpaper
-%\papertrue
+\papertrue
 
 \ifpaper
 \documentclass[compsoc,conference,a4paper]{IEEEtran}
@@ -184,7 +184,7 @@
   
   In \cite{kneib2018scission}, when identifying the source of a frame, the authors first construct a number of artificial signals from that frame. The artificial signals are made by cutting the signal and concatenating parts that share a similar behavior: positive slope transient, negative slope transient and stable positive voltage. For each of these three artificial signals, a set of time domain and frequency domain features are extracted.
   
-  CAN bus and ARINC 429 use different line protocols, therefore methods presented in the above papers cannot be directly applied to our problem without change. A key difference between the two protocols is the bus topology. In CAN bus dozens of transceivers may share one bus. The main threat CAN papers are dealing with is device hijacking, where one ECU is remotely hacked, and starts to transmit the messages of another ECU on the same bus. Since during normal operation of a car, devices do not spontaneously join or leave the network, all the devices are known to the defender in advance. This scenario naturally fits into a multiclass classification setting, where a message needs to be identified as belonging to one of many known classes. In ARINC 429 on the other hand, only one transmitter LRU is allowed on a line. Only that single transmitter LRU is known to the defender beforehand. The task is to categorize a message as either normal or as an anomaly (an attack). Multiclass classification algorithms are not suitable for this task, because only samples from the normal class can be obtained for training. Instead we need to use novelty detection algorithms \cite{pimentel2014review}. Of the CAN bus papers we reviewed, only \cite{choi2018identifying} and \cite{choi2018voltageids} extend their algorithms to handle detection of unknown transmitters.
+  CAN bus and ARINC 429 use different line protocols, therefore methods presented in the above papers cannot be directly applied to our problem without change. A key difference between the two protocols is the bus topology. In CAN bus dozens of transceivers may share one bus. The main threat CAN papers are dealing with is device hijacking, where one ECU is remotely hacked, and starts to transmit the messages of another ECU on the same bus. Since during normal operation of a car, devices do not spontaneously join or leave the network, all the devices are known to the defender in advance. This scenario naturally fits into a multiclass classification setting, where a message needs to be identified as belonging to one of many known classes. In ARINC 429 on the other hand, only one transmitter LRU is allowed on a line. Only that single transmitter LRU is known to the defender beforehand. The task is to categorize a message as either normal or as an anomaly (an attack). Multiclass classification algorithms are not suitable for this task, because only samples from the normal class can be obtained for training. Instead we need to use anomaly detection algorithms \cite{pimentel2014review}. Of the CAN bus papers we reviewed, only \cite{choi2018identifying} and \cite{choi2018voltageids} extend their algorithms to handle detection of unknown transmitters.
   
 \sublevel{Contributions}
   We propose the use of hardware fingerprinting in order to imbue ARINC 429 buses with source authentication capabilities. Applying the method only requires the attachment of a standard-compliant monitoring unit to the bus. This method does not require hardware or software updates to existing systems and is compliant with the current version of the ARINC standard.
@@ -249,49 +249,46 @@
   An intrusion detection system which draws its information exclusively from the digital content of the transmitted messages will be unable to detect the rogue transmitter LRU during the latter's dormant phases, or to detect a rogue receiver LRU. Only during an active phase of the attack of a rogue transmitter LRU is the transmitted data distinguishable from that of a legitimate transmission. By utilizing information from the analog domain, we are able to detect hardware changes independently from the transmitted data.  Usually, before takeoff, the aircraft systems are checked for basic integrity. During this pre-flight operations the changes to the bus can be detected, even if the transmitter LRU is sending normal data.
   
 \sublevel{IDS Overview} \label{Overview}
-  Our method operates on a word by word basis. When a new word is captured and tested for anomalies, we process it in several stages. This section provides an overview of these steps. In the subsequent sections each stage is explained in greater detail.
+  We will next describe our proposed method of anomaly detection. We divide the algorithm into several stages. This section provides an overview of these steps. In the subsequent sections selected stages are explained in greater detail as needed.
   
-  As our method operates on a word by word basis, it is unable to raise the alarm until after the first anomalous word is already received. We find this is a reasonable limitation, since the amount damage an adversary can cause with a single word is limited. 
+  It is appropriate to note that since our method operates on $N$ words at a time, in case of an attack it is able to raise the alarm only after sufficiently many of those transmitted words are identified as anomalous. As we will later see, there is an inherent trade-off between the method's response time, and the false alarm / misdetection ratios. We explore this trade-off in Section \ref{PerformanceEvaluation}.
   
   \begin{enumerate}
     \item \textbf{[Acquisition]}
           We sample both lines of the bus at a sampling rate that is 50 times higher than the bit rate. We used a sample rate of 5 MSa/s. The differential signal is obtained by subtracting the samples of line B from the samples of line A.
     \item \textbf{[Segmentation]}
-          The word is split into 127 segments of 10 different types, based on voltage levels. The purpose of the segmentation is to eliminate the effect of the transmitted data, the content of the word, on the final decision of the anomaly detector. See Section \ref{SignalSegmentation} for details.
+          Each word is split into 127 segments of 10 different types, based on voltage levels. The purpose of the segmentation is to eliminate the effect of the transmitted data, the content of the word, on the final decision of the anomaly detector. See Section \ref{SignalSegmentation} for details.
     \item \textbf{[Feature Extraction]}
           We extract multiple features from each segment. See Section \ref{FeatureSets} for details.
-    \item \textbf{[Anomaly Detection Per Segment]}
+    \item \textbf{[Anomaly Detection per Segment]}
           The features from each segment are fed into a trained anomaly detector. Each \textit{segment} is marked as either ``normal'' or ``anomaly''.
     \item \textbf{[Voting]}
-          A word is declared as an anomaly, if the number of ``anomaly'' segments exceeds a predetermined threshold.
+          A word is flagged as an ``anomaly'', if the number of ``normal'' segments it contains does not exceed $T_{votes}$, a predetermined threshold.
+    \item \textbf{[Suspicion Meter]}
+          We keep a counter of anomalous words. Each time a word is declared as an ``anomaly'', the counter is increased by 1, and each time a word is declared as ``normal'', the counter is decreased by 1, to a minimum of 0. Once the counter reaches a threshold of $T_{suspicion}$ an alarm is raised.
   \end{enumerate}
   
-\sublevel{Novelty Detection per Segment}
-  Our method uses per segment anomaly detection. As we shall see there are 10 types of segments, as detailed in Table \ref{tab:SegmentationLevels} in Section \ref{SignalSegmentation}. A segment's characteristics depend on its type. Therfore we opted to train a different novelty detector for each type of segment.
+\sublevel{Anomaly Detection per Segment}
+  Our method uses per segment anomaly detection. As we shall see there are 10 types of segments, as detailed in Table \ref{tab:SegmentationLevels} in Section \ref{SignalSegmentation}. A segment's characteristics depend on its type. Therefore we opted to train a different anomaly detector for each type of segment.
   
-  There are many outlier and novelty detection algorithms available in the literature such as K-Nearest Neighbors \cite{hautamaki2004outlier}, Mixture Models \cite{paalanen2006feature}, One-Class SVM \cite{scholkopf2000support} and Isolation Forest \cite{liu2008isolation}. An extensive review of various algorithms is presented in \cite{pimentel2014review}.
+  Anomaly detection, sometimes called novelty detection, is a well established. There are numerous outlier and anomaly detection algorithms available in the literature such as K-Nearest Neighbors \cite{hautamaki2004outlier}, Mixture Models \cite{paalanen2006feature}, One-Class SVM \cite{scholkopf2000support} and Isolation Forest \cite{liu2008isolation}. An extensive review of various algorithms is presented in \cite{pimentel2014review}.
   
-  For the novelty detection task, we chose to work with the Local Outlier Factor (LOF) by Breunig et al.\ \cite{breunig2000lof}. LOF was shown to work better then other algorithms for the task of network intrusion detection\cite{lazarevic2003comparative}. This fact, together with the available scikit-learn \cite{scikit-learn} Python implementation, made it an appealing choice. Comparing different anomaly detection algorithms is beyond the scope of this \iftoggle{paper} {paper} {work}.
+  For the anomaly detection task, we chose to work with the Local Outlier Factor (LOF) by Breunig et al.\ \cite{breunig2000lof}. LOF was shown to work better then other algorithms for the task of network intrusion detection\cite{lazarevic2003comparative}. This fact, together with the available scikit-learn \cite{scikit-learn} Python implementation, made it an appealing choice. Comparing different anomaly detection algorithms is beyond the scope of this \iftoggle{paper} {paper} {work}.
   
   LOF is a density based outlier detection algorithm. According to the LOF algorithm, an outlier is defined as a data point (feature vector), whose local density is greater than the average of local densities of its neighbors by a large enough margin. A local density of a data point is the inverse of the average distance of the point from its neighbors.
   
   There are several hyper-parameters for the LOF algorithm. In all cases we used the default parameters provided by the implementation. For the number of neighbors examined when calculating the LOF the default is 20. We used the Euclidean metric for the distance measure. The threshold on the local outlier factor that defines an anomaly is automatically set so that 10\% of samples in the \textit{training set} are outliers.
   
-  We constructed a separate novelty detector for each type of segment. Each segment is fed individually into its appropriate LOF novelty detector. The LOF outputs its determination regarding the source of the segment, either `normal' or `anomaly'.
+  We constructed a separate anomaly detector for each type of segment. Each segment is fed individually into its appropriate LOF anomaly detector. The LOF outputs its determination regarding the source of the segment, either ``normal'' or ``anomaly''.
   
 \sublevel{Voting}
-  We gather all the determinations made by the different LOF detectors for all segments of the same word. The number of segments that have been identified as normal is subjected to a threshold. If it is greater than that threshold, the word is predicted to be `normal', otherwise, it is flagged as an `anomaly'.
+  We gather the decisions made by the different LOF detectors for all segments of the same word. The number of segments that have been identified as normal is subjected to a voting threshold $T_{votes}$. If it does not exceed $T_{votes}$, the word is flagged as an ``anomaly'', otherwise, it is flagged as ``normal''.
   
-%%%%inline formula $\sum_{i=0}^n x_i $
-
-%%%displayed formula
-%%%\[
-%%%\sum_{i=0}^n x_i
-%%%\]
-
-%%%method 2: half-bits; how
-
-%%%%%%%%%%%%%%%%%
+\sublevel{Suspicion Meter}
+  According to our adversary model, an attacker tampers with the system once. Therefore, we expect the true label of all words int the incoming stream to be identical - either all words originate from the original system, or all words originate from a compromised system. This fact guarantees that larger the number of words we base our decision on, the lower the probability of making an error. For this purpose we incorporate what we call a suspicion meter.
+  
+  The suspicion meter is a counter that is updated on the arrival of a new word. The counter starts from 0. When a word is declared as an ``anomaly'', the counter is increased by 1, and when a word is declared as ``normal'', the counter is decreased by 1, to a minimum of 0. Once the counter reaches a threshold of $T_{suspicion}$ an alarm is raised.
+  
 \level{Signal Segmentation} \label{SignalSegmentation}
   Our method aims to rely solely on the physical characteristics of the hardware, and aims to be completely agnostic to the transmitted data. In order to achieve this goal, we divide each word into sub-bit non-overlapping segments.
   
@@ -350,19 +347,11 @@
   
 \level{Feature Sets} \label{FeatureSets}
   In our work we compare the performance of the feature sets described below.
-  
-\iftoggle{paper}{
-\subsublevel{Raw Time-Domain Samples}
-}{
-\sublevel{Raw Time-Domain Samples}
-}
+ 
+{\bf Raw Time-Domain Samples.}
   This feature set consists of the raw vector of sequential voltage samples. The only additional operation we perform after segmentation is truncating the segments to a common length, since the LOF algorithm expects all data points to be vectors of the same dimension. The length varies depending on the the segment type, as shown in Table \ref{tab:feature_set_sizes}. Note that since the data was downsampled (recall Section \ref{Overview}) the number of samples per segment is quite low - between 4-24 (see Table \ref{tab:feature_set_sizes}). This makes the Raw feature set a realistic choice.
   
-\iftoggle{paper}{
-\subsublevel{Generic Time-Domain Feature Set}
-}{
-\sublevel{Generic Time-Domain Feature Set}
-}
+{\bf Generic Time-Domain Feature Set.}
   As discussed in Section \ref{RelatedWork}, in recent years a number of papers suggested using extracted features to perform hardware fingerprinting \cite{dey2014accelprint, choi2018identifying, choi2018voltageids, kneib2018scission}. They all utilized time-domain features such as mean, standard deviation, skewness etc., with good results.
   
   These features are of a generic nature, in the sense that the shape of the signal does not affect the extraction process. Due to this property, it is possible to apply the same features in different fields of research.
@@ -398,20 +387,12 @@
   
   In addition to time-domain features, the cited papers also employ frequency-domain features. We do not use frequency-domain features in this \iftoggle{paper} {paper} {work}. We argue that the non-periodic nature of the signals, that are the result of our segmentation method, does not benefit from frequency analysis.
 
-\iftoggle{paper}{
-\subsublevel{Polynomial Feature Set}
-}{
-\sublevel{Polynomial Feature Set}
-}
+{\bf Polynomial Feature Set.}
   The features in this set are calculated by performing a least squares polynomial fit and taking each coefficient as a separate feature, plus the residual as an additional feature.
   
   In order to avoid overfitting we fit each type of segment with a polynomial function of an appropriate degree. For the four transitions (``Up from LO'', ``Up from NULL'', ``Down from HI'', ``Down from NULL'') we use a degree of 2. For ``NULL, HI to HI'' and ``NULL, LO to LO'' we use a degree of 6, on account of these segments being even functions. For the remaining segments we use a degree of 7 for similar reasons. Note that the number of features is always one more than the degree due to the residual.
   
-\iftoggle{paper}{
-\subsublevel{Hand-Crafted Feature Set}
-}{
-\sublevel{Hand-Crafted Feature Set}
-}
+{\bf Hand-Crafted Feature Set.}
   In this feature set there are different features for each segment type.
   
   We observed that the ``HI'' segments contain an overshoot followed by ripples. We denote by \((t_1, v_1), (t_2, v_2), (t_3, v_3)\) the time and voltage level at the first local maxima (the overshoot), then the first local minima that follows and then the first local maxima that follows. Time is measured from the beginning of the segment. The features we take are the above 6 values, in addition to the differences in time and voltage of the second and third points from the first point: \(t_2-t_1, v_2-v_1, t_3-t_1, v_3-v_1\). The features in the ``LO'' segments are a mirror image of the features in the ``HI'' segment.
@@ -455,8 +436,6 @@
     }
   \end{table}
   
- 
-%%%%%%%%%%%%%%%%%%
 \level{Performance Evaluation} \label{PerformanceEvaluation}
 
 \sublevel{The Data Set} \label{TheDataSet}
@@ -555,20 +534,60 @@
     \end{tabular}
   \end{table}
   
-\sublevel{Methodology}
-  In order to evaluate the performance of our algorithm, we performed an extensive series of experiments. In each experiment we select one transmitter LRU as a guarded device. Its measurements are labeled as normal, indicating the legitimate state where the adversary has not yet tampered with the system. In each experiment we select a group of other devices as rogue devices, and their measurements are labeled as anomalies, representing the state of the system after it was changed by an adversary.
+\sublevel{Perlimenary Tests}
+  Before we start with the evaluation, we perform a naive proof of concept. Reduce traces of whole words (about 1600 samples) to 2 dimensions with PCA.
   
-  Our numerical analysis of the results starts with calculating the false alarm and misdetection rates (FAR \& MDR respectively) as functions of the voting threshold. We then find the equal error rate (EER), the rate at which the FAR equals the MDR. The EER is the metric we use for comparing different hyper-parameters.
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{PCA/pca__whole_words__all_messages__by_message.png}
+    \caption{PCA dimensionality reduction of whole words}
+    \label{fig:pca_by_message}
+  \end{figure}
   
-   In our graphs we convert the ``EER to false alarms per second'' (FA/Sec) under normal operation (system unaltered by an adversary). This gives a more concrete meaning to the numbers. The FA/Sec is calculated by multiplying the EER by the message rate, and is the inverse of mean time between failures. Note that each word lasts 36 bit times, because the protocol mandates a minimum inter-word gap of at least 4 bit times.
+  PCA naturally separates the words by the value of the message they transmit. However, if we zoom in on one word group, we can see that differences in the transmitter and in the receiver also generate visible clusters, as opposed to the precense or lack of an additional transmitter.
+  
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{PCA/pca__whole_words__all_messages__color_by_tx_id__zoom_message_5A5A5A5A.png}
+    \caption{Dimensionality reduction of whole words, message 0x5A5A5A5A, label by transmitter ID}
+    \label{fig:pca_by_tx_id}
+  \end{figure}
+  
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{PCA/pca__whole_words__all_messages__color_by_rx_id__zoom_message_5A5A5A5A.png}
+    \caption{Dimensionality reduction of whole words, message 0x5A5A5A5A, label by receiver ID}
+    \label{fig:pca_by_rx_id}
+  \end{figure}
+  
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{PCA/pca__whole_words__all_messages__color_by_load__zoom_message_5A5A5A5A.png}
+    \caption{Dimensionality reduction of whole words, message 0x5A5A5A5A, label by additional receiver ID}
+    \label{fig:pca_by_load}
+  \end{figure}
+  
+  $E_1$ and $E_2$ are removed from Figure \ref{fig:pca_by_rx_id}, because each one of them has only been recorded with one receiver. The Holt devices as transmitters have been removed from \ref{fig:pca_by_load}, because only $E_1$ and $E_2$ have been recorded with additional receivers.
+  
+  The fact that we are able to cluster words by their transmitter or receiver indicate that the information needed to achieve this is present in the trace of the word. On the other hand, failure to do so in the case of an additional receiver does not tell us that it is impossible, only that it is not achieved by PCA to 2 dimensions, though it hints us that an additional receiver introduces more subtle changes to the form of the signal than a hardware switch.
+  
+  Of course, we can't use this naive method to implement an anomaly detector. First, we would need to record in advance all the possible words the transmitter LRU might transmit. Second, we used samples from all recordings when calculating the primary components, without distinguishing between a normal and a tampered system. In the real world, we are only allowed to use samples from the guarded bus to train our anomaly detector. Still, the above figures provide positive evidence that transmitter switch and receiver switch change the electrical signal in a noticeable way, while they do not provide definite proof that receiver addition does not.
+  
+\sublevel{Detection based on a Single Word - Feature Set Comparison} \label{FeatureSetComparison}
+\subsublevel{Methodology}
+  In order to evaluate the performance of our algorithm, we performed an extensive series of experiments. In each experiment we selected one transmitter LRU as a guarded device. Its measurements are labeled as normal, indicating the legitimate state where the adversary has not yet tampered with the system. In each experiment we selected a group of other devices as rogue devices. Their measurements are labeled as anomalies, representing the state of the system after it was changed by an adversary.
+  
+  In all cases we used a train-test split of 60\%-40\% of the measurements labeled as normal. The measurements labeled as anomalies are not present in the training set.
+  
+  For the purpose of comparing the different feature sets, we set $T_{suspicion} = 1$. We the run our algorithm and calculate the false alarm and misdetection rates (FAR \& MDR respectively) as functions of $T_{voting}$. Next we then find the equal error rate (EER), the rate at which the FAR equals the MDR. The EER is the metric we use for comparing different hyper-parameters.
+  
+  In our graphs we convert the ``EER to false alarms per second'' (FA/Sec) under normal operation (system unaltered by an adversary). This gives a more concrete meaning to the numbers. The FA/Sec is calculated by multiplying the EER by the message rate, and is the inverse of mean time between failures. Note that each word lasts 36 bit times, because the protocol mandates a minimum inter-word gap of at least 4 bit times.
   
   \[FA/Sec = \frac{1}{MTBF} = EER \cdot \frac{100 \sfrac{Kbits}{sec}}{36bits}\]
   
   Note that since the FA/Sec is linear in the EER, we can discuss the graphs as though they display the EER when giving a qualitative analysis.
   
-  In all cases we used a train-test split of 60\%-40\% of the measurements labeled as normal. The measurements labeled as anomalies are not present in the training set.
-  
-\sublevel{Identifying a Rogue Transmitter}
+\subsublevel{Identifying a Rogue Transmitter}
   In this series of experiments we simulate an attack, where the adversary switches the guarded transmitter LRU by a rogue transmitter LRU. In each experiment we designate one of the our transmitters as the legitimate device to be guarded. In addition we choose one receiver, either \(\text{P}_1\) or \(\text{P}_2\).  We train our IDS to identify samples from the chosen Tx-Rx pair as normal.
   
   We then test the trained IDS. We simulate a rogue transmitter LRU by using measurements of other transmitters connected to the chosen receiver as anomalies. We remind the reader that during each measurement, only one transmitter is connected to the bus.
@@ -577,7 +596,7 @@
   
   For example, if we choose \(\text{E}_1\) as the guarded transmitter and \(\text{P}_1\) as the receiver, words from row 1 in Table \ref{tab:RecordingsSummery} are labeled as normal and used in the training stage and in the testing stage. Words from rows 6-13 are labeled as anomalies and used in the testing stage.
   
-  We repeat this process for all possible values of voting thresholds (0-127) and indicate the MDR and the FAR for each threshold. From these values we obtain the EER and the FA/sec.
+  We repeat this process for all possible values of $T_{votes}$ (0-127) while keeping $T_{suspicion} = 1$. For each value of $T_{votes}$ we indicate the MDR and the FAR. From these values we obtain the EER and the FA/sec.
   
   We repeat this process for four feature sets with all pairs of guarded transmitter and receiver. We end up with 18 experiments per feature set.
   
@@ -586,20 +605,13 @@
   \begin{figure}[t]
     \centering
     \includegraphics[width=1.0\linewidth, angle=0]{Graphs/fas_rogue_transmitter.png}
-    \caption{Comparing the feature sets for identifying a rogue transmitter}
+    \caption{Comparing the feature sets for identifying a rogue transmitter. \(N = 1\)}
     \label{fig:rogue_transmitter_results}
-  \end{figure}
-  
-  \begin{figure}[t]
-    \centering
-    \includegraphics[width=1.0\linewidth, angle=0]{Graphs/fas_rogue_receiver_switch.png}
-    \caption{Comparing the feature sets for identifying a rogue receiver switch}
-    \label{fig:receiver_results}
   \end{figure}
   
   The figure shows that intruder detection yields the best results in term of EER when we use the Raw feature set. Both the median and the spread of the values are low. The EER values for the Generic and Polynomial feature sets are slightly more spread out, and the median is greater. The Hand-Crafted feature set is clearly inferior.
   
-  The Generic, Raw and Polynomial feature sets have comparable performance, with Raw being slightly better with a median EER value of 0.12\% compared to 0.32\% and 0.19\% for the Generic and Polynomial feature sets. Since there is no significant reduction in memory costs from using the Generic feature set (recall Table \ref{tab:feature_set_sizes}), we conclude that in our case it is best to use the raw voltage samples, since in the tradeoff between memory/runtime and performance, with the Generic set we spend significant effort to extract the features, and obtain no gain in comparison to the raw signal.
+  The Generic, Raw and Polynomial feature sets have comparable performance, with Raw being slightly better with a median EER value of 0.12\% compared to 0.32\% and 0.19\% for the Generic and Polynomial feature sets. Since there is no significant reduction in memory costs from using the Generic feature set (recall Table \ref{tab:feature_set_sizes}), we conclude that in our case it is best to use the raw voltage samples, since in the trade-off between memory/runtime and performance, with the Generic set we spend significant effort to extract the features, and obtain no gain in comparison to the raw signal.
   
   We point out that there is a correlation between the number of features in the set and the performance of the feature set. The feature sets with reduced performance, namely the Hand-Crafted and Polynomial sets, have significantly fewer features for some segments - as few as 2 - and the Hand-Crafted sets totally ignores two segment types. The more features there are in the set, the more expressive the model is. Perhaps the two feature sets would perform better if they included additional features.
   
@@ -612,10 +624,7 @@
     \includegraphics[width=1.0\linewidth, angle=0]{Graphs/time_e1_p1_mdr_far.png}
     \caption{FAR and MDR for \(\text{E}_1\) as guarded as a function of the threshold}
     \label{fig:detection_easy_example}
-  \end{figure}
   
-  \begin{figure}[t]
-    \centering
     \includegraphics[width=1.0\linewidth, angle=0]{Graphs/time_h21_p1_mdr_far.png}
     \caption{FAR and MDR for \(\text{H}_{21}\) as guarded as a function of the threshold}
     \label{fig:detection_difficult_example}
@@ -625,8 +634,10 @@
   In case of the \(\text{E}_1\) transmitter (Figure \ref{fig:detection_easy_example}), the MDR and the FAR curves do not intersect. In fact, the MDR overlaps the left-side boundary of the figure. There is a wide range of thresholds, for which an error rate of 0 can be achieved simultaneously for both rates. This makes \(\text{E}_1\) easily distinguishable from Holt transmitters. In contrast, in the case of the \(\text{H}_{21}\) transmitter (Figure \ref{fig:detection_difficult_example}) there is only a narrow range of thresholds for which both error rates are small, and the EER is greater than 0. This makes the tuning of the threshold important.
   
   Another thing to observe is that in both Figures \ref{fig:detection_easy_example} and \ref{fig:detection_difficult_example} the FAR curve is roughly the same, while the MDR curve spreads to higher thresholds in Figure \ref{fig:detection_difficult_example}. Note that the FAR is only calculated from samples of the guarded transmitter, and that the MDR is only calculated from samples of the rogue transmitters. The task of labeling a word from a guarded device as normal is not affected by the type of the guarded device. However, the success of the task of labeling rogue transmitters as anomalies heavily depends on the uniqueness of the guarded device.
-   
-\sublevel{Identifying a Rogue Receiver Switch}
+  
+  We continue to evalueate the performance of the complete method as a function of $T_{suspicion}$. We select the Raw feature set and set $T_{votes} = 100$.
+  
+\subsublevel{Identifying a Rogue Receiver Switch}
   In the next series of experiments we simulate an attack, where the adversary replaces an existing receiver with a rogue one. The training stage is the same as the training stage in the previous series of experiments: One of the Holt devices is used as a transmitter, and either \(\text{P}_1\) or \(\text{P}_2\) is used a a receiver.
   
   In the testing stage, we simulate an attack by using measurements taken with the same transmitter as in the training stage, but with the other receiver LRU.
@@ -635,7 +646,14 @@
   
   The results are shown in Figure \ref{fig:receiver_results}. We see that all feature sets perform worse than they did in identifying rogue transmitters (compare to Figure \ref{fig:rogue_transmitter_results}). That is to be expected, since communication systems are designed to mitigate the effect of the receivers on the transmission signal. The surprising result is that the Generic feature set performs better in this scenario than the Raw feature set, and the Polynomial feature set performs better than both of them. The fact that different feature sets are sensitive to changes in different components of the monitored system could be used to our advantage. An IDS could incorporate different anomaly detectors based on different feature sets. When an anomaly is detected, we could then identify the source of the attack by checking which feature set triggered the alarm.
   
-\sublevel{Identifying an Addition of a Rogue Receiver}
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{Graphs/fas_rogue_receiver_switch.png}
+    \caption{Comparing the feature sets for identifying a rogue receiver switch. \(N = 1\)}
+    \label{fig:receiver_results}
+  \end{figure}
+  
+\subsublevel{Identifying an Addition of a Rogue Receiver}
   In the final series of experiments we simulate an attack, where the adversary connects an additional receiver to the bus. The training stage is the same as the training stage in the previous series of experiments, except that only \(\text{E}_1\) and \(\text{E}_2\) are used as transmitters.
   
   In the testing stage, we use measurements taken where a Holt receiver was connected to the bus in addition to the transmitter and receiver from the training stage.
@@ -649,10 +667,48 @@
   \begin{figure}[t]
     \centering
     \includegraphics[width=1.0\linewidth, angle=0]{Graphs/fas_rogue_receiver_add.png}
-    \caption{Comparing the feature sets for identifying a rogue receiver addition}
+    \caption{Comparing the feature sets for identifying a rogue receiver addition. \(N = 1\)}
     \label{fig:load_results}
   \end{figure}
 
+\sublevel{Performance of the Complete Method}
+  In Section \ref{FeatureSetComparison} we saw that different feature sets are suited for detecting different adversary models; the Raw feature set for detecting a rogue transmitter, and the Polynomial feature set for detecting a rogue transmitter. We now continue our evaluation with these two feature sets. We examine how the performance can be improved when we increase $T_{suspicion}$, factoring into our detector's decision data from more than one word.  We do not discuss how to identify an additional receiver, since we could not identify it with sufficient certainty in Section \ref{FeatureSetComparison}.
+  
+  From each configuration, i.e.\ transmitter-receiver pair, we have a trace of 1968 words that were transmitted sequentially. We run the detection algorithm with a specific value of $T_{suspicion}$
+  For each value of $T_{suspicion}$, we run the 
+  
+  We wish to examine the FAR as a function of the counter threshold. For each transmitter-receiver pair in our data set, we repeat the following process. We train an anomaly detector on words from the chosen pair. We run our algorithm with $T_{voting} = 100$ and a choice of $T_{suspicion}$ on words from the test set of the same transmitter-receiver pair and note whether or not an anomaly was detected. We repeat his test 1000 times, each time starting from a random point in time and going over all the words.  Overall there are 18000 measurements \textcolor{blue}{(9 transmitter * 2 receivers * 1000)}. Figure \ref{fig:counter_far} shows the results.
+  
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{Graphs/counter_far.png}
+    \caption{FAR as a function of $T_{suspicion}$. $T_{votes} = 1$}
+    \label{fig:counter_far}
+  \end{figure}
+  
+  As expected, the false alarm rate decreases as $T_{suspicion}$ increases. For $T_{suspicion}$ greater than 16, there were no false alarms. We note that although this is the best result we could achieve in our tests, it does not guarantee a FAR of 0\%. We can only say that the probability of a false alarm is too low for one to manifest itself in our data set.
+  
+  Measuring the MDR is 0, since given sufficient time an anomaly will always be detected. Instead of measuring the MDR, we measure the time it takes for our detector to raise an alarm. The process is similar to the process of measuring the FAR. Instead of testing the trained detector on words from the same transmitter-receiver pairs, on which it was trained, we test it words from different pairs, according to the adversary model that is being simulated, as explained in section \ref{FeatureSetComparison}. We run our algorithm with $T_{voting} = 100$. The Raw feature set is used for measuring a rogue transmitter detection, and the polynomial feature set is used when detecting a rogue receiver. We count the number of words it takes for the detector to raise an alarm. Overall, for a rogue transmitter there are 14400 measurements and for a rogue receiver there are 8000 measurements for each value of $T_{suspicion}$ \textcolor{blue}{(9 transmitter * 2 receivers * 8 transmitters * 1000, 8 * transmitters * 1000)}.
+  
+  Figure \ref{fig:counter_detection_time_rogue_tx} shows the maximal time we measured for detecting a rogue transmitter, over all combinations of guarded and attacking transmitters. Figure \ref{fig:counter_detection_time_rogue_rx} shows the same for detecting a rogue receiver. The blue line indicates the lower bound - the time it takes to transmit $T_{suspicion}$ messages. In our test set the average transmission rate is 610 words per second, about 20\% of the full available bandwidth.
+  
+  \begin{figure}[t]
+    \centering
+    \includegraphics[width=1.0\linewidth, angle=0]{Graphs/counter_rogue_tx-attack.png}
+    \caption{Maximal amount of time for detecting a rogue transmitter. $T_{votes} = 1$}
+    \label{fig:counter_detection_time_rogue_tx}
+  
+    \includegraphics[width=1.0\linewidth, angle=0]{Graphs/counter_rogue_rx-attack.png}
+    \caption{Minimal amount of time for detecting a rogue receiver. $T_{votes} = 1$}
+    \label{fig:counter_detection_time_rogue_rx}
+  \end{figure}
+  
+  \textcolor{blue}{One graph goes up to 200, while the second one only goes up to 100, because our test set has only 3 seconds of recordings (per configuration). Should I address it directly? Ignore it? Cut both graphs at 100 to avoid questions?}
+  
+  In both cases, the maximal observed detection time rises faster than the theoretical lower bound. For rogue transmitter detection, the maximal time is of the same order of magnitude of as the lower bound, while for the case of rogue receiver detection, the maximal time is an order of magnitude higher. The difference is due to the difference in MD rates for a single word, as seen in section \ref{FeatureSetComparison}.
+  
+  The suspicion meter reduces false alarms at the expense of delaying the detection of an attack. We find the trade-off worthwhile. A rogue transmitter is detected in under a second, which greatly reduces the adversaries ability to mount a successful attack. A rogue receiver is detected in several seconds, which is still good. In addition, it is a passive attack which cannot cause damage directly, therefore it is not as urgent to detect it.
+  
 \level{Conclusions} \label{Conclusions}
   We presented our hardware fingerprinting method for the ARINC 429 bus. The method could be used to retrofit source authentication into existing avionic systems with minimal effort.
   
